Remove duplicate 'flu' entry from conditions list

--- a/University_of_Helsinki_Building_AI_Elements_of_AI.ipynb
+++ b/University_of_Helsinki_Building_AI_Elements_of_AI.ipynb
@@ -89,7 +89,7 @@
         "            'ear_pain fever'\n",
         "        ],\n",
         "        'condition': [\n",
-        "            'flu', 'flu', 'cardiac_emergency', 'gastroenteritis',\n",
+        "            'flu', 'cardiac_emergency', 'gastroenteritis',\n",
         "            'covid_suspicion', 'headache', 'dengue_suspicion', 'tonsillitis',\n",
         "            'blood_pressure', 'otitis'\n",
         "        ],\n",
